@@ -1,3 +1,8 @@
+2000-09-05  Robert Graham Merkel  <rgmerk@mira.net>
+
+	* src/scm/date-utilities.scm ((gnc:reldate-initialize)): New function - initialise
+	explicitly at startup rather than in ad-hoc manner
+
 2000-08-31  Robert Graham Merkel  <rgmerk@mira.net>
 
 	* src/scm/report/balance-and-pnl.scm: Bug fixes for new date options.
